# minijinja

./: .clippy.toml  .gitignore  CHANGELOG.md  CLAUDE.md  COMPATIBILITY.md  CONTRIBUTING.md  Cargo.lock.msrv  Cargo.toml  HUMAN_VS_MACHINE.md  IMPLEMENTATION_SUMMARY.md  Makefile  README.md  UPDATING.md  _typos.toml  autoresearch.ideas.md  autoresearch.jsonl  autoresearch.md  autoresearch.sh  dist-workspace.toml  task.md  test.js
benchmarks/: Cargo.toml  README.md  rinja.toml  sailfish.toml
benchmarks/benches/: comparison.rs  templates.rs
benchmarks/inputs/: all_elements.html  footer.html  macro_heavy.html  map_items.jinja  string_heavy.html
benchmarks/inputs/comparison/: askama.html  askama_footer.html  handlebars.html  handlebars_footer.html  liquid.html  liquid_footer.html  minijinja.html  tera_footer.html
examples/embedding/: Cargo.toml  README.md  build.rs
examples/embedding/src/: main.rs
examples/merge-context/: Cargo.toml  README.md
examples/merge-context/src/: main.rs
examples/recursive-for/: Cargo.toml  README.md
examples/recursive-for/src/: main.rs
examples/syntax-highlighting/: Cargo.toml  README.md  test.html
examples/syntax-highlighting/src/: example.html  main.rs
examples/wasm-basic/: Cargo.toml  README.md  index.html
examples/wasm-basic/src/: lib.rs
examples/wasm-yew/: Cargo.toml  README.md  index.html
examples/wasm-yew/.cargo/: config.toml
examples/wasm-yew/src/: main.rs
minijinja/: Cargo.toml  doc-header.html  test_hex_template.rs
minijinja-autoreload/: Cargo.toml  README.md  doc-header.html
minijinja-autoreload/examples/: test_autoreload_repro.rs  test_exact_user_scenario.rs  test_fs_watcher_errors.rs  test_fs_watcher_take.rs  test_mutex_race.rs  test_notifier_race.rs  test_permission_changes.rs  test_reload_loop.rs  test_weak_ref_failure.rs  test_weak_ref_issue.rs  test_weak_ref_upgrade_race.rs
minijinja-autoreload/src/: lib.rs
minijinja-cli/: Cargo.toml  Makefile  README.md  build.rs  generate-syntax-docs.py
minijinja-cli/examples/: alias.j2  alias.yaml  dump.j2  hello.j2  hello.json  hello.json5  hello.qs  hello.toml  hello.yaml  include.txt
minijinja-cli/src/: cli.rs  command.rs  config.rs  long_help.txt  main.rs  output.rs  repl.rs  syntax_help.txt
minijinja-cli/tests/: test_basic.rs
minijinja-cli/tests/snapshots/: test_basic__long_help.snap  test_basic__short_help.snap
minijinja-contrib/: Cargo.toml  README.md
minijinja-contrib/src/: filters.rs  globals.rs  html_entities.rs  lib.rs  pycompat.rs  rand.rs
minijinja-contrib/src/filters/: datetime.rs  format.rs  mod.rs
minijinja-contrib/tests/: datetime.rs  filters.rs  format.rs  globals.rs  pycompat.rs  str_format.rs
minijinja-embed/: Cargo.toml  README.md
minijinja-embed/src/: lib.rs
minijinja-js/: Cargo.toml  Makefile  README.md  package-lock.json  package.json
minijinja-js/src/: lib.rs
minijinja-js/tests/: test_all.mjs
minijinja-py/: .gitignore  Cargo.toml  Makefile  README.md  demo.py  hello.py  pyproject.toml
minijinja-py/python/minijinja/: __init__.py  __init__.pyi  _internal.py  _lowlevel.pyi
minijinja-py/python/minijinja_py/: __init__.py
minijinja-py/src/: environment.rs  error_support.rs  lib.rs  state.rs  typeconv.rs
minijinja-py/tests/: test_basic.py  test_security.py  test_state.py
minijinja-py/tests/templates/: base.txt
minijinja-stack-ref/: Cargo.toml  README.md
minijinja-stack-ref/src/: lib.rs
minijinja/examples/: README.md
minijinja/src/: ast.rs  compiler.rs  context.rs  custom_syntax.rs  debug.rs  defaults.rs  deserialize.rs  environment.rs  error.rs  expression.rs  filters.rs  format_utils.rs  functions.rs  instructions.rs  key.rs  lexer.rs  lib.rs  loader.rs  macros.rs  meta.rs  output.rs  parser.rs  settings.rs  source.rs  syntax.rs  template.rs  tests.rs  testutils.rs  tokens.rs  utils.rs  value.rs  vm.rs
minijinja/src/compiler/: ast.rs  codegen.rs  instructions.rs  lexer.rs  meta.rs  mod.rs  parser.rs  to_source.rs  tokens.rs
minijinja/src/key/: deserialize.rs  mod.rs  serialize.rs
minijinja/src/value/: argtypes.rs  deserialize.rs  keyref.rs  map.rs  merge_object.rs  mod.rs  namespace_object.rs  object.rs  ops.rs  serde_fallback.rs  serialize.rs  string_interning.rs  tests.rs  type_erase.rs  value.rs
minijinja/src/vm/: closure_object.rs  context.rs  forloop.rs  fuel.rs  loop_object.rs  macro_object.rs  macro_support.rs  mod.rs  state.rs
minijinja/tests/: test_ast.rs  test_compiler.rs  test_deserialization.rs  test_environment.rs  test_filters.rs  test_format_filter.rs  test_fuel.rs  test_hex_escape.rs  test_hex_escapes.rs  test_jinja2_compat.rs  test_lexer.rs  test_loader.rs  test_macros.rs  test_parser.rs  test_pycompat_rendering.rs  test_set_unpacking.rs  test_source.rs  test_state.rs  test_templates.rs  test_tests.rs  test_undefined.rs  test_value.rs  test_vm.rs
minijinja/tests/fragment-inputs/: fragment_from_parent.txt  fragment_ref_parent.txt  fragment_simple.txt  fragment_simple_extend.txt  fragment_super.txt  fragment_super_super.txt
minijinja/tests/inputs/: adding.txt  autoescape.txt  block.txt  block_scope.txt  block_scope_extends.txt  block_scope_super.txt  block_super.html  block_super.txt  block_super_err.txt  block_super_super.txt  call.txt  calls-and-literals.txt  cmp.txt  coerce.txt  concat.txt  debug.txt  dict.txt  do_closure.txt  do_macro.txt  do_macro_caller_error.txt  do_macro_calling_macro.txt  err_bad_addition.txt  err_bad_args_unpack.txt  err_bad_basic_block.txt  err_bad_block.txt  err_bad_call.txt  err_bad_call_block_call.txt  err_bad_call_block_list_call.txt  err_bad_dotted_assign_forloop.txt  err_bad_dotted_assign_macro.txt  err_bad_dotted_assign_with.txt  err_bad_fast_recurse.txt  err_bad_filter.txt  err_bad_filter_truncate.txt  err_bad_kwargs_unpack.txt  err_bad_nested_subtraction.txt  err_bad_range.txt  err_bad_recursion.txt  err_bad_super.txt  err_bad_test.txt  (+115 more)
minijinja/tests/lexer-inputs/: attrs.txt  basic.txt  block-filter.txt  keep-trailing-newlines.txt  line-comment.txt  line-statement.txt  literals.txt  loop.txt  lstrip-blocks-comment.txt  lstrip-blocks.txt  (+12 more)
(+728 files in other folders)
