[workspace]
members = ["minijinja", "examples/*", "benchmarks", "minijinja-*"]
exclude = ["examples/README.md"]
resolver = "2"

# Config for 'cargo dist'
[workspace.metadata.dist]
cargo-dist-version = "0.22.1"
ci = "github"
installers = ["shell", "powershell"]
targets = ["aarch64-apple-darwin", "aarch64-unknown-linux-gnu", "aarch64-unknown-linux-musl", "arm-unknown-linux-musleabihf", "armv7-unknown-linux-gnueabihf", "armv7-unknown-linux-musleabihf", "x86_64-apple-darwin", "powerpc64-unknown-linux-gnu", "x86_64-unknown-linux-gnu", "x86_64-unknown-linux-musl", "x86_64-pc-windows-msvc", "i686-unknown-linux-gnu", "i686-unknown-linux-musl", "i686-pc-windows-msvc"]
pr-run-mode = "plan"
precise-builds = true
install-path = "CARGO_HOME"
install-updater = false

[profile.release]
strip = true

[profile.dev.package.insta]
opt-level = 3

[profile.dev.package.similar]
opt-level = 3

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
