[package]
edition = "2018"
name    = "benchmarks"
version = "0.1.0"

[features]
speedups = ["minijinja/speedups"]

[dependencies]
askama = "0.12.1"
handlebars = "5.1.2"
liquid = "0.26.1"
minijinja = { path = "../minijinja", default-features = false, features = [
    "unstable_machinery",
    "multi_template",
    "builtins",
] }
rinja = "0.3.4"
sailfish = "0.9.0"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
tera = "1.17.1"

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }

[[bench]]
harness = false
name    = "templates"

[[bench]]
harness = false
name    = "comparison"
