[package]
name = "minijinja-cli"
version = "1.0.12"
edition = "2021"
license = "Apache-2.0"
authors = ["Armin Ronacher <armin.ronacher@active-4.com>"]
description = "Command Line Utility to render MiniJinja/Jinja2 templates"
homepage = "https://github.com/mitsuhiko/minijinja"
repository = "https://github.com/mitsuhiko/minijinja"
keywords = ["jinja", "jinja2", "templates", "cli"]
readme = "README.md"
rust-version = "1.61"

[features]
default = ["toml", "yaml", "querystring", "cbor", "datetime", "json5", "repl"]
yaml = ["serde_yaml"]
querystring = ["serde_qs"]
cbor = ["ciborium"]
datetime = ["minijinja-contrib/datetime", "minijinja-contrib/timezone"]
json5 = ["serde_json5"]
repl = ["rustyline"]

[dependencies]
anyhow = "1.0.74"
ciborium = { version = "0.2.1", optional = true }
clap = { version = "4.3.21", default-features = false, features = [
    "std",
    "cargo",
    "help",
    "usage",
    "error-context",
] }
dunce = "1.0.4"
minijinja = { version = "=1.0.12", path = "../minijinja", features = [
    "loader",
    "json",
    "urlencode",
    "fuel",
    "unstable_machinery",
] }
minijinja-contrib = { version = "=1.0.12", path = "../minijinja-contrib" }
rustyline = { version = "12.0.0", optional = true }
serde = "1.0.183"
serde_json = "1.0.105"
serde_json5 = { version = "0.1.0", optional = true }
serde_qs = { version = "0.12.0", optional = true }
serde_yaml = { version = "0.9.25", optional = true }
toml = { version = "0.7.6", optional = true }
