[package]
name = "minijinja-contrib"
version = "1.0.15"
edition = "2018"
license = "Apache-2.0"
authors = ["Armin Ronacher <armin.ronacher@active-4.com>"]
description = "Extra utilities for MiniJinja"
homepage = "https://github.com/mitsuhiko/minijinja"
repository = "https://github.com/mitsuhiko/minijinja"
keywords = ["jinja", "jinja2", "templates"]
readme = "README.md"
rust-version = "1.61"

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docsrs", "--html-in-header", "doc-header.html"]
all-features = true

[features]
default = []
datetime = ["time"]
timezone = ["time-tz"]

[dependencies]
minijinja = { version = "1.0.15", path = "../minijinja", default-features = false }
serde = "1.0.164"
time = { version = "0.3.22", optional = true, features = ["serde", "formatting", "parsing"] }
time-tz = { version = "1.0.3", features = ["db"], optional = true }

[dev-dependencies]
chrono = { version = "0.4.26", features = ["serde"] }
minijinja = { version = "1.0.15", path = "../minijinja", features = ["loader"] }
similar-asserts = "1.4.2"
