[package]
name = "minijinja-contrib"
version = "2.4.0"
edition = "2021"
license = "Apache-2.0"
authors = ["Armin Ronacher <armin.ronacher@active-4.com>"]
description = "Extra utilities for MiniJinja"
homepage = "https://github.com/mitsuhiko/minijinja"
repository = "https://github.com/mitsuhiko/minijinja"
keywords = ["jinja", "jinja2", "templates"]
readme = "README.md"
rust-version = "1.61"

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docsrs", "--html-in-header", "doc-header.html"]
all-features = true

[features]
default = []
pycompat = ["axominijinja/builtins"]
datetime = ["time"]
timezone = ["time-tz"]
rand = ["dep:rand"]

[dependencies]
axominijinja = { version = "2.4.0", path = "../minijinja", default-features = false }
rand = { version = "0.8.5", optional = true, default-features = false, features = ["std", "std_rng", "small_rng"] }
serde = "1.0.164"
time = { version = "0.3.35", optional = true, features = ["serde", "formatting", "parsing"] }
time-tz = { version = "1.0.3", features = ["db"], optional = true }

[dev-dependencies]
insta = { version = "1.38.0", features = ["glob", "serde"] }
chrono = { version = "0.4.26", features = ["serde"] }
axominijinja = { version = "2.4.0", path = "../minijinja", features = ["loader"] }
similar-asserts = "1.4.2"
