[package]
name = "minijinja-js"
version = "2.7.0"
description = "a powerful template engine with minimal dependencies"
publish = false
edition = "2021"
license = "Apache-2.0"
authors = ["Armin Ronacher <armin.ronacher@active-4.com>"]
rust-version = "1.70"

[lib]
bench = false
crate-type = ["cdylib", "rlib"]
doc = false
doctest = false
test = false

[features]
default = ["console_error_panic_hook"]

[target.'cfg(target_family="wasm")'.dependencies]
wasm-bindgen = "0.2.97"
console_error_panic_hook = { version = "0.1.7", optional = true }

[target.'cfg(target_family="wasm")'.dev-dependencies]
wasm-bindgen-test = "0.3.47"

[dependencies]
minijinja = { path = "../minijinja", features = ["loader", "json", "fuel"] }
fragile = "2.0.0"
js-sys = "0.3.77"
minijinja-contrib = { version = "2.7.0", path = "../minijinja-contrib", features = ["pycompat"] }
serde-wasm-bindgen = "0.6.5"
serde_json = "1.0.139"
wee_alloc = "0.4.5"
