[package]
name = "minijinja-py"
version = "2.7.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "minijinja_py"
crate-type = ["cdylib"]

[dependencies]
minijinja = { version = "2.7.0", path = "../minijinja", features = ["loader", "json", "urlencode", "fuel", "preserve_order", "speedups", "custom_syntax", "loop_controls", "internal_safe_search"] }
pyo3 = { version = "0.23.4", features = ["extension-module", "serde", "abi3-py38"] }
