[package]
name = "minijinja-py"
version = "2.16.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "minijinja_py"
crate-type = ["cdylib"]

[dependencies]
minijinja = { version = "2.16.0", path = "../minijinja", features = ["loader", "json", "urlencode", "fuel", "preserve_order", "speedups", "custom_syntax", "loop_controls", "internal_safe_search"] }
minijinja-contrib = { version = "2.16.0", path = "../minijinja-contrib", features = ["pycompat", "html_entities"] }
pyo3 = { version = "0.27.0", features = ["extension-module", "serde", "abi3-py38"] }

[build-dependencies]
pyo3-build-config = "0.27.0"
