[package]
name = "minijinja-stack-ref"
version = "0.32.0"
edition = "2018"
license = "Apache-2.0"
authors = ["Armin Ronacher <armin.ronacher@active-4.com>"]
description = "dynamic stack references for MiniJinja"
homepage = "https://github.com/mitsuhiko/minijinja"
repository = "https://github.com/mitsuhiko/minijinja"
keywords = ["jinja", "jinja2", "templates", "autoreload", "borrow"]
readme = "README.md"
rust-version = "1.61"

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docsrs", "--html-in-header", "doc-header.html"]

[dependencies]
minijinja = { version = "0.32.0", path = "../minijinja", default-features = false }
