[package]
name = "minijinja"
version = "0.19.1"
edition = "2018"
license = "Apache-2.0"
authors = ["Armin Ronacher <armin.ronacher@active-4.com>"]
description = "a powerful template engine for Rust with minimal dependencies"
homepage = "https://github.com/mitsuhiko/minijinja"
repository = "https://github.com/mitsuhiko/minijinja"
keywords = ["jinja", "jinja2", "templates"]
readme = "README.md"
rust-version = "1.45"
exclude = ["tests"]

[package.metadata.docs.rs]
features = ["source", "json", "urlencode"]
rustdoc-args = ["--cfg", "docsrs", "--html-in-header", "doc-header.html"]

[features]
default = ["builtins", "debug", "key_interning", "deserialization"]
deserialization = []
key_interning = []
preserve_order = ["indexmap"]
debug = []
speedups = ["v_htmlescape"]
source = ["self_cell", "memo-map"]
builtins = []
json = ["serde_json"]
urlencode = ["percent-encoding"]

# enables the Debug trait for some internal types
internal_debug = []
# provides access to the unstable machinery
unstable_machinery = ["internal_debug"]

[dependencies]
serde = "1.0.130"
v_htmlescape = { version = "0.15.8", optional = true }
self_cell = { version = "0.10.1", optional = true, features = ["old_rust"] }
serde_json = { version = "1.0.68", optional = true }
percent-encoding = { version = "2.1.0", optional = true }
indexmap = { version = "1.7.0", optional = true }
memo-map = { version = "0.3.1", optional = true }

[dev-dependencies]
insta = { version = "1.19.0", features = ["glob", "serde"] }
serde_json = "1.0.68"
similar-asserts = "1.4.2"

[[test]]
name = "test_templates"
required-features = ["unstable_machinery", "internal_debug"]
