[package]
name = "minijinja"
version = "0.23.0"
edition = "2021"
license = "Apache-2.0"
authors = ["Armin Ronacher <armin.ronacher@active-4.com>"]
description = "a powerful template engine for Rust with minimal dependencies"
homepage = "https://github.com/mitsuhiko/minijinja"
repository = "https://github.com/mitsuhiko/minijinja"
keywords = ["jinja", "jinja2", "templates"]
readme = "README.md"
rust-version = "1.61"
exclude = ["tests"]

[package.metadata.docs.rs]
features = ["source", "json", "urlencode"]
rustdoc-args = ["--cfg", "docsrs", "--html-in-header", "doc-header.html"]

[features]
default = ["builtins", "debug", "key_interning", "deserialization", "macros", "multi-template"]

# API features
preserve_order = ["indexmap"]
deserialization = []
debug = []
source = ["self_cell", "memo-map"]

# Speedups
key_interning = []
speedups = ["v_htmlescape", "key_interning"]

# Engine Features
builtins = []
macros = []
multi-template = []

# Extra Filters
json = ["serde_json"]
urlencode = ["percent-encoding"]

# Internal Features that should not be used
internal_debug = []
unstable_machinery = ["internal_debug"]

[dependencies]
serde = "1.0.130"
v_htmlescape = { version = "0.15.8", optional = true }
self_cell = { version = "0.10.1", optional = true }
serde_json = { version = "1.0.68", optional = true }
percent-encoding = { version = "2.1.0", optional = true }
indexmap = { version = "1.7.0", optional = true }
memo-map = { version = "0.3.1", optional = true }

[dev-dependencies]
insta = { version = "1.19.0", features = ["glob", "serde"] }
serde_json = "1.0.68"
similar-asserts = "1.4.2"
