[package]
name = "embedding"
version = "0.1.0"
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
bundled = []

[dependencies]
axominijinja = { path = "../../minijinja", features = ["loader"] }
minijinja-embed = { path = "../../minijinja-embed" }

[build-dependencies]
minijinja-embed = { path = "../../minijinja-embed" }
