[package]
name = "recursive-for"
version = "0.1.0"
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
minijinja = { path = "../../minijinja", features = ["debug", "internal_debug"] }
serde = { version = "1.0.130", features = ["derive"] }
