[package]
name = "syntax-highlighting"
version = "0.1.0"
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axominijinja = { path = "../../minijinja" }
syntect = { version = "5.2.0", default-features = false, features = ["default-fancy", "default-syntaxes"] }
