[package]
name = "wasm-basic"
version = "0.1.0"
edition = "2018"

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
minijinja = { path = "../..//minijinja" }
wasm-bindgen = "0.2.83"
web-sys = { version = "0.3.60", features = ['Document', 'Window', 'Element']}
