[package]
name = "wasm-yew"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
minijinja = { path = "../../minijinja" }
serde_json = "1.0.91"
web-sys = { version = "0.3.60", features = ["Document", "Window", "Element"]}
yew = { version = "0.20.0", features = ["csr"] }
